--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -42,7 +42,7 @@ spring.profiles.active=h2
 # 注意：在properties中实现多环境较为麻烦，建议直接根据需求注释掉其中一组
 # 以下是 H2 配置示例：
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./data/teacherai_fresh;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:file:./backend/data/teacherai_fresh;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
